// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadList should render with ltr bengali items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.625rem;
  line-height: 1.875rem;
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 16px;
}

.c5 {
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: auto;
}

.c8 {
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: NaN;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 0.5rem) + 2 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(4/8*(100% - 8 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(4/20*(100% - 20 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-left: 32px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ১
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ২
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ৩
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ৪
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ৫
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ৬
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ৭
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ৮
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ৯
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ১০
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr burmese items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 16px;
}

.c5 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: auto;
}

.c8 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: NaN;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 0.5rem) + 2 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(4/8*(100% - 8 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(4/20*(100% - 20 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.25rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 2.75rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-left: 32px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 4.125rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 5.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 2.5rem;
    line-height: 4.125rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 3.5rem;
    line-height: 5.375rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ၁
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ၂
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ၃
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ၄
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ၅
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ၆
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ၇
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ၈
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ၉
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ၁၀
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr news items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-left: 16px;
}

.c5 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: auto;
}

.c8 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: NaN;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 0.5rem) + 2 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(4/8*(100% - 8 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(4/20*(100% - 20 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-left: 32px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          2
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          3
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          4
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          5
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          6
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          7
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          8
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          9
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          10
        </span>
        <div
          class="c6"
          dir="ltr"
        >
          <a
            class="c7"
            href="https://www.bbc.co.uk/news/business-43328806"
          >
            John Lewis staff bonus cut again as profits fall
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with rtl arabic items with correct dir 1`] = `
.c1 {
  display: inline;
}

.c7 {
  color: #222222;
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  padding-bottom: 1.5rem;
  padding-right: 16px;
}

.c5 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: auto;
}

.c8 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: NaN;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 0.5rem) + 2 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(4/8*(100% - 8 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(4/20*(100% - 20 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:80rem) {
  .c6 {
    padding-top: 0.5rem;
    padding-right: 32px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="rtl"
  >
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ۱
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ۲
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ۳
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ۴
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c5"
        >
          ۵
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ۶
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ۷
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ۸
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ۹
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <span
          class="c8"
        >
          ۱۰
        </span>
        <div
          class="c6"
          dir="rtl"
        >
          <a
            class="c7"
            href="https://www.bbc.com/persian/iran-46965704"
          >
            ایران از لغو 'رزمایش قطع اینترنت' خبر داد
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;
